# hint

./: CMakeLists.txt  HintConfig.cmake  README.md  hint.hpp
backend/: backend_types.hpp
include/: hint.hpp
include/arithmetic/: tiled_product.hpp  tiling.hpp
include/backend/: backend_impl.in  backend_types.hpp  bitset_impl.ipp  boost_cpp_int_impl.hpp  catapult_impl.ipp  config.hpp  extint_impl.ipp  gmp_impl.ipp  intel_impl.hpp  intel_impl.ipp  masked_word_impl.ipp  vivado_impl.ipp  word_array_impl.ipp
include/control/: loop.hpp
include/helpers/: bit_sequence_generator.hpp  splitting.hpp
include/primitives/: backwards.hpp  indicator_to_index.hpp  lossless_shifter.hpp  lzc.hpp  lzoc.hpp  lzoc_shifter.hpp  multi_result_holder.hpp  reductions.hpp  reverse.hpp  shifter.hpp  shifter_sticky.hpp  table.hpp  useful_functor.hpp  zero_one_normaliser.hpp
include/tools/: functools.hpp  int_sequence.hpp  printing.hpp  sequence.hpp  static_math.hpp
tests/arithmetic/: arithmetic_main.cpp
tests/back_end/: bitset_main.cpp  boost_cpp_int_main.cpp  intel_main.cpp  masked_word_main.cpp  vivado_main.cpp  word_array_main.cpp
tests/backend/: catapult_main.cpp  extint_arithmetic.cpp  extint_logic.cpp  extint_main.cpp  gmp_main.cpp  intel_main.cpp  intel_table.cpp  vivado_main.cpp  vivado_table.cpp
tests/primitives/: lzoc_shifter_and_shifter_sticky_main.cpp  lzoc_shifter_main.cpp  shifter_sticky_main.cpp  test_lzoc.cpp
tests/vivado_hls_tests/: backward.ini  lzoc_shift.ini  requirements.txt
tests/vivado_hls_tests/comp/: backward.cpp  lzoc_shift.cpp
